--- a/ILNEditor/ILNEditor.csproj
+++ b/ILNEditor/ILNEditor.csproj
@@ -1,156 +1,31 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{60D13E6D-0DAF-4726-BE5C-2D249583D32B}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ILNEditor</RootNamespace>
-    <AssemblyName>ILNEditor</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\Build\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\Build\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\Build\Release\ILNEditor.xml</DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
+    <TargetFramework>net5.0-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
+    <Version>1.0.1</Version>
+    <Copyright>Copyright © 2017-2020 Thilo Viereck</Copyright>
+    <RepositoryUrl>https://github.com/profix898/ILNEditor</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Authors>Thilo Viereck</Authors>
+    <Company />
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Description>Properties editor and plot browser for ILNumerics (http://ilnumerics.net/) scene graphs and plot cubes</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ILNumerics.Computing, Version=5.4.0.0, Culture=neutral, PublicKeyToken=8d9bf50ef854734d, processorArchitecture=MSIL" />
-    <Reference Include="ILNumerics.Core, Version=5.4.0.0, Culture=neutral, PublicKeyToken=9651adc37f12bb00, processorArchitecture=MSIL" />
-    <Reference Include="ILNumerics.Drawing, Version=5.4.0.0, Culture=neutral, PublicKeyToken=e22c8a010c3b081a, processorArchitecture=MSIL" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Drawing.Design" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
+    <Compile Include="ILNumerics_deploy\ILNHelper.cs" Condition="$(EnableDefaultCompileItems) != 'true'" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Drawing\CameraWrapper.cs" />
-    <Compile Include="Drawing\CircleWrapper.cs" />
-    <Compile Include="Drawing\ConeWrapper.cs" />
-    <Compile Include="Drawing\CylinderWrapper.cs" />
-    <Compile Include="Drawing\GearWrapper.cs" />
-    <Compile Include="Drawing\GroupWrapper.cs" />
-    <Compile Include="Drawing\PointLightWrapper.cs" />
-    <Compile Include="Drawing\PointsWrapper.cs" />
-    <Compile Include="Drawing\ScreenObjectWrapper.cs" />
-    <Compile Include="Drawing\SelectionRectangleWrapper.cs" />
-    <Compile Include="Drawing\ShapeWrapper.cs" />
-    <Compile Include="Drawing\SphereWrapper.cs" />
-    <Compile Include="Drawing\TrianglesWrapper.cs" />
-    <Compile Include="Drawing\WrapperBase.cs" />
-    <Compile Include="Drawing\Plotting\AxisCollectionWrapper.cs" />
-    <Compile Include="Drawing\LabelWrapper.cs" />
-    <Compile Include="Drawing\LimitsWrapper.cs" />
-    <Compile Include="Drawing\Plotting\LegendItemWrapper.cs" />
-    <Compile Include="Drawing\Plotting\LegendWrapper.cs" />
-    <Compile Include="Drawing\Plotting\LinePlotWrapper.cs" />
-    <Compile Include="Drawing\LinesWrapper.cs" />
-    <Compile Include="Drawing\Plotting\PlotCubeDataGroupWrapper.cs" />
-    <Compile Include="Drawing\Plotting\PlotCubeScaleGroupWrapper.cs" />
-    <Compile Include="Drawing\Plotting\SurfaceWrapper.cs" />
-    <Compile Include="Editors\PlotBrowserForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Editors\PlotBrowserForm.Designer.cs">
-      <DependentUpon>PlotBrowserForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="IDialog.cs" />
-    <Compile Include="ILNEditorConfig.cs" />
-    <Compile Include="ILNumerics_deploy\ILNHelper.cs" />
-    <Compile Include="IPanelEditor.cs" />
-    <Compile Include="IPlotBrowser.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Serialization\DictionaryDeserializer.cs" />
-    <Compile Include="Serialization\DictionarySerializer.cs" />
-    <Compile Include="Serialization\IDeserializer.cs" />
-    <Compile Include="Serialization\SerializableColor.cs" />
-    <Compile Include="Serialization\SerializableFont.cs" />
-    <Compile Include="Serialization\SerializerWeightAttribute.cs" />
-    <Compile Include="Serialization\XmlDeserializer.cs" />
-    <Compile Include="Serialization\XmlSerializer.cs" />
-    <Compile Include="Serialization\SerializerExtensions.cs" />
-    <Compile Include="Serialization\ISerializer.cs" />
-    <Compile Include="Serialization\SerializerIgnoreAttribute.cs" />
-    <Compile Include="TypeExpanders\Matrix4Expander.cs" />
-    <Compile Include="TypeExpanders\Matrix4ExpanderOperations.cs" />
-    <Compile Include="TypeExpanders\RectangleFExpander.cs" />
-    <Compile Include="WrapperMap.cs" />
-    <Compile Include="Drawing\Plotting\AxisWrapper.cs" />
-    <Compile Include="Drawing\DrawableWrapper.cs" />
-    <Compile Include="Drawing\Plotting\MarkerWrapper.cs" />
-    <Compile Include="Drawing\NodeWrapper.cs" />
-    <Compile Include="Drawing\Plotting\PlotCubeWrapper.cs" />
-    <Compile Include="Drawing\Plotting\ScaleModesWrapper.cs" />
-    <Compile Include="Drawing\Plotting\TickWrapper.cs" />
-    <Compile Include="Drawing\Plotting\TickCollectionWrapper.cs" />
-    <Compile Include="Editors\PanelEditorForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Editors\PanelEditorForm.Designer.cs">
-      <DependentUpon>PanelEditorForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PanelEditor.cs" />
-    <Compile Include="TypeConverters\PointFConverter.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TypeConverters\Vector3Converter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Editors\PanelEditorForm.resx">
-      <DependentUpon>PanelEditorForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Editors\PlotBrowserForm.resx">
-      <DependentUpon>PlotBrowserForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ILNumerics_deploy\ilnumerics.lic" />
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <PackageReference Include="EMG.External.ILNumerics" Version="5.5.7504" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ILNumerics_deploy\ILNImports1.targets" />
     <None Include="ILNumerics_deploy\ILNImports2.targets" />
-    <None Include="Resources\collapse-all.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\items.png" />
+    <EmbeddedResource Include="ILNumerics_deploy\ilnumerics.lic" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="ILNumerics_deploy\ILNImports1.targets" Condition="$(ILNLicCompile) != 'true'" />
   <Import Project="ILNumerics_deploy\ILNImports2.targets" Condition="$(ILNLicCompile) == 'true'" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
